<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">
    <!--  android:background="@drawable/johnnymoto" -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devise_dep"
        android:textSize="30dp"
        android:textColor="#3E3D35"
        android:fontFamily="@font/many_years_higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Spinner
        android:id="@+id/spinner_devise_depart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devise_arr"
        android:fontFamily="@font/many_years_higher"
        android:textSize="30dp"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/spinner_devise_depart"
        app:layout_constraintVertical_bias="0.029" />

    <Spinner
        android:id="@+id/spinner_devise_arrivee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/many_years_higher"
        android:text="@string/montant"
        android:textSize="30dp"
        android:textColor="#9BA0BF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/spinner_devise_arrivee"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/buttonconv"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/convert"
        android:onClick="convertClic"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/buttonexit"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:onClick="exitClic"
        android:text="@string/exit"
        app:layout_constraintStart_toEndOf="@+id/buttonconv"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/buttonconvar"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:layout_marginTop="112dp"
        android:text="@string/convar"
        android:onClick="clicConvertirAR"
        app:layout_constraintEnd_toStartOf="@+id/buttonexit"
        app:layout_constraintStart_toEndOf="@+id/buttonconv"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />
</androidx.constraintlayout.widget.ConstraintLayout>